--- a/index.html
+++ b/index.html
@@ -1,194 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FA-Tshirt</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FA-Tshirt | Trendy Affordable Tees</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    @font-face {
-      font-family: 'SnapITC';
-      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/22228/SNAP____.TTF') format('truetype');
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
     body {
-      margin: 0;
       font-family: 'Roboto', sans-serif;
-      background-color: #fff;
-      color: #000;
+      background-color: #f4f4f4;
+      color: #333;
     }
 
     header {
       background-color: #d90429;
-      padding: 10px 20px;
+      padding: 15px 30px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
       flex-wrap: wrap;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
       position: sticky;
       top: 0;
       z-index: 1000;
     }
 
     .logo {
-      font-family: 'SnapITC', sans-serif;
       font-size: 28px;
       font-weight: bold;
-      color: white;
-      text-shadow: 2px 2px 0 #000;
-    }
-
-    .search-bar {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      padding: 10px;
+      color: #fff;
     }
 
     .search-bar input {
-      width: 60%;
       padding: 10px;
+      width: 300px;
       border-radius: 5px;
       border: none;
       outline: none;
-      font-size: 16px;
     }
 
-    .nav-categories {
-      width: 100%;
+    .header-icons a {
+      color: #fff;
+      margin-left: 20px;
+      font-size: 20px;
+      text-decoration: none;
+    }
+
+    nav {
       background-color: #fff;
+      padding: 10px 30px;
       display: flex;
       justify-content: center;
-      padding: 10px 0;
       gap: 30px;
     }
 
-    .nav-categories a {
+    nav a {
+      text-decoration: none;
       color: #d90429;
-      text-decoration: none;
       font-weight: bold;
-      position: relative;
     }
 
-    .nav-categories a:hover::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background: #d90429;
-      bottom: -5px;
-      left: 0;
-    }
-
-    .icons {
+    .hero {
+      background: url('https://images.unsplash.com/photo-1521335629791-ce4aec67dd47?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover;
+      height: 300px;
       display: flex;
-      gap: 15px;
-    }
-
-    .icons a {
+      align-items: center;
+      justify-content: center;
       color: white;
-      font-size: 20px;
-      text-decoration: none;
-      transition: transform 0.2s ease-in-out;
-    }
-
-    .icons a:hover {
-      transform: scale(1.2);
+      font-size: 32px;
+      font-weight: bold;
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
     }
 
     .product-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
-      padding: 20px;
+      padding: 30px;
     }
 
     .product {
-      background: #fff;
-      border: 1px solid #ddd;
-      text-align: center;
-      padding: 10px;
+      background: white;
       border-radius: 10px;
-      transition: 0.3s;
-    }
-
-    .product:hover {
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      transform: scale(1.02);
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+      padding: 15px;
+      text-align: center;
     }
 
     .product img {
       max-width: 100%;
-      height: auto;
-      border-radius: 8px;
+      border-radius: 10px;
+    }
+
+    .product h3 {
+      margin: 10px 0 5px;
+    }
+
+    .product p {
+      margin-bottom: 10px;
+    }
+
+    .product button {
+      background-color: #d90429;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
     }
 
     footer {
-      background:#d90429;
-      color:white;
-      text-align:center;
-      padding:10px 0;
-      margin-top:20px;
-    }
-
-    @media screen and (max-width: 768px) {
-      .search-bar input {
-        width: 90%;
-      }
-      .nav-categories {
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-      }
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 20px;
     }
   </style>
 </head>
+
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
     <div class="search-bar">
-      <input type="text" placeholder="Search for products..." />
+      <input type="text" placeholder="Search for tees...">
     </div>
-    <div class="icons">
+    <div class="header-icons">
       <a href="#">❤️</a>
       <a href="#">🛒</a>
       <a href="#">👤</a>
     </div>
   </header>
 
-  <nav class="nav-categories">
+  <nav>
     <a href="#">Men</a>
     <a href="#">Women</a>
     <a href="#">Kids</a>
+    <a href="#">New Arrivals</a>
+    <a href="#">Offers</a>
   </nav>
+
+  <div class="hero">
+    Wear What You Believe In
+  </div>
 
   <section class="product-grid">
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1602810318383-b7e8f61f0d06?auto=format&fit=crop&w=600&q=80" alt="Round Neck Tee">
-      <h3>Round Neck Tee</h3>
+      <img src="https://images.unsplash.com/photo-1600180758890-6c0e18fe524b?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+      <h3>Classic Round Neck</h3>
       <p>₹299</p>
+      <button>Add to Cart</button>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1622222862567-c6be17b88274?auto=format&fit=crop&w=600&q=80" alt="Black Tee">
-      <h3>Black Down Shoulder</h3>
+      <img src="https://images.unsplash.com/photo-1556909212-6c91e5fbf312?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+      <h3>Down Shoulder Fit</h3>
       <p>₹349</p>
+      <button>Add to Cart</button>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1542060748-10c28b62716f?auto=format&fit=crop&w=600&q=80" alt="Street Style">
-      <h3>Street Style Fit</h3>
+      <img src="https://images.unsplash.com/photo-1603252110632-2275b3d8c59c?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
+      <h3>Urban Street Tee</h3>
       <p>₹399</p>
+      <button>Add to Cart</button>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1520975917867-3a9b1309f520?auto=format&fit=crop&w=600&q=80" alt="Casual Fit">
-      <h3>Casual Drop Shoulder</h3>
+      <img src="https://images.unsplash.com/photo-1618354691261-229be38101dd?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
+      <h3>Statement Print</h3>
       <p>₹279</p>
+      <button>Add to Cart</button>
     </div>
   </section>
 
   <footer>
-    © 2025 FA-Tshirt | All rights reserved.
+    <p>&copy; 2025 FA-Tshirt | India's Coolest T-shirt Brand. All Rights Reserved.</p>
   </footer>
 </body>
+
 </html>
