--- a/index.html
+++ b/index.html
@@ -1,60 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FA-Tshirt | Trendy Affordable Tees</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FA-Tshirt</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
 
     body {
       font-family: 'Roboto', sans-serif;
-      background-color: #f4f4f4;
-      color: #333;
+      background: url('https://images.unsplash.com/photo-1605902711622-cfb43c4437d3') no-repeat center center fixed;
+      background-size: cover;
+      color: #000;
     }
 
     header {
-      background-color: #d90429;
-      padding: 15px 30px;
+      background-color: rgba(217, 4, 41, 0.9);
+      padding: 15px 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
       position: sticky;
       top: 0;
       z-index: 1000;
     }
 
     .logo {
-      font-size: 28px;
+      font-size: 30px;
       font-weight: bold;
       color: #fff;
     }
 
     .search-bar input {
-      padding: 10px;
-      width: 300px;
-      border-radius: 5px;
+      padding: 8px 12px;
       border: none;
-      outline: none;
-    }
-
-    .header-icons a {
-      color: #fff;
-      margin-left: 20px;
-      font-size: 20px;
-      text-decoration: none;
+      border-radius: 5px;
+      width: 300px;
+      font-size: 16px;
     }
 
     nav {
-      background-color: #fff;
-      padding: 10px 30px;
+      background: #fff;
+      padding: 10px;
       display: flex;
       justify-content: center;
       gap: 30px;
@@ -64,38 +56,53 @@
       text-decoration: none;
       color: #d90429;
       font-weight: bold;
+      position: relative;
+    }
+
+    nav a:hover::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background: #d90429;
+      bottom: -5px;
+      left: 0;
     }
 
     .hero {
-      background: url('https://images.unsplash.com/photo-1521335629791-ce4aec67dd47?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover;
-      height: 300px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      text-align: center;
       color: white;
-      font-size: 32px;
-      font-weight: bold;
-      text-shadow: 2px 2px 10px rgba(0,0,0,0.6);
+      margin: 40px 20px;
+      font-size: 2em;
+      font-weight: 700;
+      text-shadow: 2px 2px 5px #000;
     }
 
     .product-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 20px;
-      padding: 30px;
+      padding: 20px;
     }
 
     .product {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+      background: rgba(255, 255, 255, 0.9);
       padding: 15px;
+      border-radius: 10px;
       text-align: center;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+    }
+
+    .product:hover {
+      transform: scale(1.03);
     }
 
     .product img {
-      max-width: 100%;
-      border-radius: 10px;
+      width: 100%;
+      border-radius: 8px;
+      height: 240px;
+      object-fit: cover;
     }
 
     .product h3 {
@@ -103,82 +110,89 @@
     }
 
     .product p {
-      margin-bottom: 10px;
+      margin: 5px 0;
+      font-weight: bold;
     }
 
     .product button {
-      background-color: #d90429;
+      background: #d90429;
       color: white;
-      padding: 10px 15px;
+      padding: 8px 15px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
     }
 
+    .product button:hover {
+      background: #a80220;
+    }
+
     footer {
-      background-color: #222;
+      background: rgba(0,0,0,0.7);
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 15px 0;
+      margin-top: 20px;
     }
   </style>
 </head>
-
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
     <div class="search-bar">
-      <input type="text" placeholder="Search for tees...">
-    </div>
-    <div class="header-icons">
-      <a href="#">❤️</a>
-      <a href="#">🛒</a>
-      <a href="#">👤</a>
+      <input type="text" placeholder="Search for T-shirts...">
     </div>
   </header>
 
   <nav>
-    <a href="#">Men</a>
-    <a href="#">Women</a>
-    <a href="#">Kids</a>
-    <a href="#">New Arrivals</a>
-    <a href="#">Offers</a>
+    <a href="#men">Men</a>
+    <a href="#women">Women</a>
+    <a href="#kids">Kids</a>
+    <a href="#new">New Arrivals</a>
+    <a href="#offers">Offers</a>
   </nav>
 
   <div class="hero">
-    Wear What You Believe In
+    Be Stylish, Be Bold – Only with FA-Tshirt 🔥
   </div>
 
   <section class="product-grid">
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1600180758890-6c0e18fe524b?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
-      <h3>Classic Round Neck</h3>
+      <img src="https://images.unsplash.com/photo-1602810318383-5c60ef8f3e8f" alt="Model wearing round neck tee">
+      <h3>Round Neck Tee</h3>
       <p>₹299</p>
       <button>Add to Cart</button>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1556909212-6c91e5fbf312?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
-      <h3>Down Shoulder Fit</h3>
+      <img src="https://images.unsplash.com/photo-1618354691323-3d996b5e2c4d" alt="Down Shoulder Tee">
+      <h3>Down Shoulder Tee</h3>
       <p>₹349</p>
       <button>Add to Cart</button>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1603252110632-2275b3d8c59c?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
-      <h3>Urban Street Tee</h3>
+      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab" alt="Graphic Tee">
+      <h3>Graphic Tee</h3>
       <p>₹399</p>
       <button>Add to Cart</button>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1618354691261-229be38101dd?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
-      <h3>Statement Print</h3>
+      <img src="https://images.unsplash.com/photo-1593032465171-d99d45d0f234" alt="Classic Fit">
+      <h3>Classic Fit</h3>
       <p>₹279</p>
       <button>Add to Cart</button>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2025 FA-Tshirt | India's Coolest T-shirt Brand. All Rights Reserved.</p>
+    © 2025 FA-Tshirt | Designed with ❤️ by YourBhai
   </footer>
-</body>
 
+  <script>
+    document.querySelectorAll('button').forEach(btn => {
+      btn.addEventListener('click', () => {
+        alert('Product added to cart! (Functionality coming soon)');
+      });
+    });
+  </script>
+</body>
 </html>
