--- a/index.html
+++ b/index.html
@@ -7,131 +7,134 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
     body {
       font-family: 'Roboto', sans-serif;
-      background: url('https://images.unsplash.com/photo-1605902711622-cfb43c4437d3') no-repeat center center fixed;
+      background: url('https://wallpapercave.com/wp/wp5128415.jpg') no-repeat center center fixed;
       background-size: cover;
-      color: #000;
+      color: #fff;
     }
 
     header {
-      background-color: rgba(217, 4, 41, 0.9);
-      padding: 15px 20px;
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       position: sticky;
       top: 0;
       z-index: 1000;
+      animation: fadeDown 1s ease;
+    }
+
+    @keyframes fadeDown {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .logo {
-      font-size: 30px;
-      font-weight: bold;
-      color: #fff;
+      font-size: 32px;
+      font-weight: 700;
+      color: #e63946;
+      text-shadow: 2px 2px 0 #000;
     }
 
-    .search-bar input {
-      padding: 8px 12px;
-      border: none;
-      border-radius: 5px;
-      width: 300px;
-      font-size: 16px;
-    }
-
-    nav {
-      background: #fff;
-      padding: 10px;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-    }
-
-    nav a {
+    .nav-links a {
+      color: white;
       text-decoration: none;
-      color: #d90429;
+      margin: 0 15px;
       font-weight: bold;
-      position: relative;
+      transition: color 0.3s ease;
     }
 
-    nav a:hover::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background: #d90429;
-      bottom: -5px;
-      left: 0;
+    .nav-links a:hover {
+      color: #ff6b6b;
     }
 
     .hero {
       text-align: center;
-      color: white;
-      margin: 40px 20px;
-      font-size: 2em;
-      font-weight: 700;
-      text-shadow: 2px 2px 5px #000;
+      padding: 100px 20px;
+      background: rgba(0,0,0,0.5);
+      animation: fadeUp 1s ease;
     }
 
-    .product-grid {
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 20px;
+    }
+
+    .products {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      padding: 20px;
+      gap: 30px;
+      padding: 40px;
+      background: rgba(0,0,0,0.7);
     }
 
     .product {
-      background: rgba(255, 255, 255, 0.9);
-      padding: 15px;
+      background: #fff;
+      color: #000;
       border-radius: 10px;
-      text-align: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .product:hover {
-      transform: scale(1.03);
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #000;
     }
 
     .product img {
       width: 100%;
-      border-radius: 8px;
-      height: 240px;
+      height: 250px;
       object-fit: cover;
     }
 
-    .product h3 {
-      margin: 10px 0 5px;
+    .product-info {
+      padding: 15px;
+      text-align: center;
     }
 
-    .product p {
-      margin: 5px 0;
-      font-weight: bold;
+    .product-info h3 {
+      margin-bottom: 10px;
     }
 
-    .product button {
-      background: #d90429;
-      color: white;
-      padding: 8px 15px;
+    .product-info p {
+      margin-bottom: 10px;
+    }
+
+    .buy-btn {
+      background-color: #e63946;
       border: none;
-      border-radius: 5px;
+      color: white;
+      padding: 10px 20px;
       cursor: pointer;
+      border-radius: 5px;
+      transition: background 0.3s;
     }
 
-    .product button:hover {
-      background: #a80220;
+    .buy-btn:hover {
+      background-color: #d90429;
     }
 
     footer {
-      background: rgba(0,0,0,0.7);
-      color: white;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 20px;
       text-align: center;
-      padding: 15px 0;
+      color: white;
       margin-top: 20px;
     }
   </style>
@@ -139,60 +142,54 @@
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
-    <div class="search-bar">
-      <input type="text" placeholder="Search for T-shirts...">
-    </div>
+    <nav class="nav-links">
+      <a href="#">Home</a>
+      <a href="#products">Products</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="#men">Men</a>
-    <a href="#women">Women</a>
-    <a href="#kids">Kids</a>
-    <a href="#new">New Arrivals</a>
-    <a href="#offers">Offers</a>
-  </nav>
+  <section class="hero">
+    <h1>Welcome to FA-Tshirt</h1>
+    <p>Trendy | Comfortable | Affordable</p>
+  </section>
 
-  <div class="hero">
-    Be Stylish, Be Bold – Only with FA-Tshirt 🔥
-  </div>
-
-  <section class="product-grid">
+  <section class="products" id="products">
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1602810318383-5c60ef8f3e8f" alt="Model wearing round neck tee">
-      <h3>Round Neck Tee</h3>
-      <p>₹299</p>
-      <button>Add to Cart</button>
+      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+      <div class="product-info">
+        <h3>Black Round Neck</h3>
+        <p>₹299</p>
+        <button class="buy-btn" onclick="addToCart('Black Round Neck')">Add to Cart</button>
+      </div>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1618354691323-3d996b5e2c4d" alt="Down Shoulder Tee">
-      <h3>Down Shoulder Tee</h3>
-      <p>₹349</p>
-      <button>Add to Cart</button>
+      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+      <div class="product-info">
+        <h3>White Graphic Tee</h3>
+        <p>₹349</p>
+        <button class="buy-btn" onclick="addToCart('White Graphic Tee')">Add to Cart</button>
+      </div>
     </div>
     <div class="product">
-      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab" alt="Graphic Tee">
-      <h3>Graphic Tee</h3>
-      <p>₹399</p>
-      <button>Add to Cart</button>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1593032465171-d99d45d0f234" alt="Classic Fit">
-      <h3>Classic Fit</h3>
-      <p>₹279</p>
-      <button>Add to Cart</button>
+      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
+      <div class="product-info">
+        <h3>Red Street Style</h3>
+        <p>₹399</p>
+        <button class="buy-btn" onclick="addToCart('Red Street Style')">Add to Cart</button>
+      </div>
     </div>
   </section>
 
   <footer>
-    © 2025 FA-Tshirt | Designed with ❤️ by YourBhai
+    &copy; 2025 FA-Tshirt. All rights reserved.
   </footer>
 
   <script>
-    document.querySelectorAll('button').forEach(btn => {
-      btn.addEventListener('click', () => {
-        alert('Product added to cart! (Functionality coming soon)');
-      });
-    });
+    function addToCart(productName) {
+      alert(productName + " added to cart!");
+    }
   </script>
 </body>
 </html>
