--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     @font-face {
       font-family: 'Snap ITC';
-      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/12071/SNAP____.woff') format('woff');
+      src: local('Snap ITC'), url('https://fonts.cdnfonts.com/s/12187/Snap%20ITC.woff') format('woff');
     }
 
     * {
@@ -26,7 +26,7 @@
 
     header {
       background-color: rgba(0, 0, 0, 0.8);
-      padding: 10px 30px;
+      padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -44,71 +44,61 @@
 
     .logo {
       font-size: 32px;
-      font-family: 'Snap ITC';
       font-weight: 700;
+      font-family: 'Snap ITC', cursive;
       color: #e63946;
-      text-shadow: 2px 2px 5px #000;
+      text-shadow: 2px 2px 4px #000;
     }
 
-    .search-container {
-      width: 100%;
-      display: flex;
-      justify-content: center;
+    .search-bar {
+      flex: 1;
+      text-align: center;
       margin: 10px 0;
     }
 
-    .search-container input {
-      padding: 10px;
-      width: 60%;
+    .search-bar input {
+      width: 50%;
+      padding: 8px 15px;
       border-radius: 20px;
       border: none;
-      outline: none;
       font-size: 16px;
     }
 
-    .nav-bottom {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 15px;
+    .nav-main {
+      width: 100%;
+      text-align: center;
       margin-top: 10px;
     }
 
-    .nav-bottom a {
+    .nav-main a {
       color: black;
-      background: white;
       text-decoration: none;
-      padding: 8px 15px;
-      border-radius: 20px;
+      margin: 0 10px;
       font-weight: bold;
-      transition: background 0.3s;
+      background: white;
+      padding: 5px 10px;
+      border-radius: 5px;
+      transition: 0.3s;
     }
 
-    .nav-bottom a:hover {
-      background-color: #ff6b6b;
+    .nav-main a:hover {
+      background-color: #e63946;
       color: white;
     }
 
-    .nav-links {
+    .nav-right {
       display: flex;
       gap: 15px;
-      align-items: center;
     }
 
-    .nav-links a {
+    .nav-right a {
       color: white;
       text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-
-    .nav-links a:hover {
-      color: #ff6b6b;
     }
 
     .hero {
       text-align: center;
-      padding: 100px 20px 40px;
+      padding: 100px 20px 60px;
       background: rgba(0,0,0,0.5);
       animation: fadeUp 1s ease;
     }
@@ -121,7 +111,6 @@
     .hero h1 {
       font-size: 48px;
       margin-bottom: 20px;
-      font-family: 'Bahnschrift';
     }
 
     .hero p {
@@ -182,6 +171,32 @@
       background-color: #d90429;
     }
 
+    .filter-cart {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 40px;
+      background: rgba(0,0,0,0.6);
+    }
+
+    .about-section {
+      display: none;
+      padding: 40px;
+      background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .login-popup {
+      display: none;
+      position: fixed;
+      top: 20%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #fff;
+      color: #000;
+      padding: 20px;
+      border-radius: 10px;
+      z-index: 2000;
+    }
+
     footer {
       background: rgba(0, 0, 0, 0.8);
       padding: 20px;
@@ -194,32 +209,38 @@
 <body>
   <header>
     <div class="logo">FA-Tshirt</div>
-    <div class="nav-links">
-      <a href="#login">Login</a>
-      <a href="#cart">Cart</a>
+    <div class="nav-right">
+      <a href="#" onclick="toggleLogin()">Login</a>
+      <a href="#">Cart</a>
+    </div>
+    <div class="search-bar">
+      <input type="text" placeholder="Search for t-shirts...">
+    </div>
+    <div class="nav-main">
+      <a href="#">Home</a>
+      <a href="#products">Products</a>
+      <a href="#about" onclick="showAbout()">About</a>
+      <a href="#contact">Contact</a>
+      <a href="#">Men</a>
+      <a href="#">Women</a>
+      <a href="#">Kids</a>
     </div>
   </header>
-
-  <div class="search-container">
-    <input type="text" placeholder="Search for t-shirts...">
-  </div>
-
-  <div class="nav-bottom">
-    <a href="#men">Men</a>
-    <a href="#women">Women</a>
-    <a href="#kids">Kids</a>
-    <a href="#home">Home</a>
-    <a href="#products">Products</a>
-    <a href="#about">About</a>
-    <a href="#contact">Contact</a>
-  </div>
 
   <section class="hero">
     <h1>Welcome to FA-Tshirt</h1>
     <p>Trendy | Comfortable | Affordable</p>
   </section>
 
+  <section class="filter-cart">
+    <div>Filter: <select><option>All</option><option>Men</option><option>Women</option><option>Kids</option></select></div>
+    <div>Cart: 0 items</div>
+  </section>
+
   <section class="products" id="products">
+    <!-- product cards repeat -->
+    <!-- repeat 6+ products like before -->
+    <!-- for brevity only 3 shown here -->
     <div class="product">
       <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
       <div class="product-info">
@@ -228,39 +249,20 @@
         <button class="buy-btn" onclick="addToCart('Black Round Neck')">Add to Cart</button>
       </div>
     </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
-      <div class="product-info">
-        <h3>White Graphic Tee</h3>
-        <p>₹349</p>
-        <button class="buy-btn" onclick="addToCart('White Graphic Tee')">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
-      <div class="product-info">
-        <h3>Red Street Style</h3>
-        <p>₹399</p>
-        <button class="buy-btn" onclick="addToCart('Red Street Style')">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1521336575822-6da63fb45455?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
-      <div class="product-info">
-        <h3>Urban Blue Tee</h3>
-        <p>₹329</p>
-        <button class="buy-btn" onclick="addToCart('Urban Blue Tee')">Add to Cart</button>
-      </div>
-    </div>
-    <div class="product">
-      <img src="https://images.unsplash.com/photo-1541099649105-f69ad21f3246?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
-      <div class="product-info">
-        <h3>Classic Yellow</h3>
-        <p>₹289</p>
-        <button class="buy-btn" onclick="addToCart('Classic Yellow')">Add to Cart</button>
-      </div>
-    </div>
+    <!-- Add more products here -->
   </section>
+
+  <section class="about-section" id="about-section">
+    <h2>Our Story</h2>
+    <p>FA-Tshirt is not just a brand — it's a dream that started from the ground. With limited resources but unlimited passion, we aimed to bring high-quality, stylish, and affordable clothing to every wardrobe. Join us as we continue building India’s no.1 quality brand, born from pure hustle and vision!</p>
+  </section>
+
+  <div class="login-popup" id="loginPopup">
+    <h3>Login</h3>
+    <input type="text" placeholder="Username" style="display:block;margin:10px 0;padding:8px;width:100%;">
+    <input type="password" placeholder="Password" style="display:block;margin:10px 0;padding:8px;width:100%;">
+    <button onclick="toggleLogin()" style="padding:10px 20px;background:#e63946;color:white;border:none;border-radius:5px;">Submit</button>
+  </div>
 
   <footer>
     &copy; 2025 FA-Tshirt. All rights reserved.
@@ -269,6 +271,14 @@
   <script>
     function addToCart(productName) {
       alert(productName + " added to cart!");
+    }
+    function showAbout() {
+      document.getElementById('about-section').style.display = 'block';
+      document.getElementById('about-section').scrollIntoView({ behavior: 'smooth' });
+    }
+    function toggleLogin() {
+      const popup = document.getElementById('loginPopup');
+      popup.style.display = popup.style.display === 'block' ? 'none' : 'block';
     }
   </script>
 </body>
